RESOLVED FIXED164532
[WK2] Network cache speculative revalidation can cause loads to hang
https://bugs.webkit.org/show_bug.cgi?id=164532
Summary [WK2] Network cache speculative revalidation can cause loads to hang
Chris Dumez
Reported 2016-11-08 15:53:26 PST
Network cache speculative revalidation can cause loads to hang when HTTP authentication is used.
Attachments
Patch (8.79 KB, patch)
2016-11-08 16:05 PST, Chris Dumez
no flags
Patch (8.84 KB, patch)
2016-11-08 16:53 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-11-08 15:53:45 PST
Chris Dumez
Comment 2 2016-11-08 16:05:30 PST
Alex Christensen
Comment 3 2016-11-08 16:43:49 PST
Comment on attachment 294199 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=294199&action=review > Source/WebKit2/NetworkProcess/cache/NetworkCacheSpeculativeLoad.cpp:118 > +void SpeculativeLoad::canAuthenticateAgainstProtectionSpaceAsync(const WebCore::ProtectionSpace&) #if USE(PROTECTION_SPACE_AUTH_CALLBACK) around this
Chris Dumez
Comment 4 2016-11-08 16:53:07 PST
Chris Dumez
Comment 5 2016-11-09 10:09:32 PST
Comment on attachment 294201 [details] Patch Clearing flags on attachment: 294201 Committed r208437: <http://trac.webkit.org/changeset/208437>
Chris Dumez
Comment 6 2016-11-09 10:09:36 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.