[WK2] Network cache speculative revalidation can cause loads to hang https://bugs.webkit.org/show_bug.cgi?id=164532 <rdar://problem/28519331>

Reviewed by Alex Christensen.

Source/WebKit2:

Network cache speculative revalidation could cause loads to hang when HTTP
authentication was involved because NetworkCacheSpeculativeLoad failed to
call NetworkLoad::continueCanAuthenticateAgainstProtectionSpace() in its
canAuthenticateAgainstProtectionSpaceAsync() callback.

* NetworkProcess/cache/NetworkCacheSpeculativeLoad.cpp:
(WebKit::NetworkCache::SpeculativeLoad::canAuthenticateAgainstProtectionSpaceAsync):
* NetworkProcess/cache/NetworkCacheSpeculativeLoad.h:

LayoutTests:

Add layout test coverage. The test hangs without the fix.

* http/tests/cache/disk-cache/speculative-validation/http-auth-expected.txt: Added.
* http/tests/cache/disk-cache/speculative-validation/http-auth.html: Added.
* http/tests/cache/disk-cache/speculative-validation/resources/frame-with-authenticated-resource.php: Added.
* http/tests/cache/disk-cache/speculative-validation/resources/resource-with-auth.php: Added.

Canonical link: https://commits.webkit.org/182169@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208437 268f45cc-cd09-0410-ab3c-d52691b4dbfc